@@ -18,16 +18,17 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <spring.boot.version>3.5.12</spring.boot.version>
+        <spring.boot.version>3.5.14</spring.boot.version>
         <cucumber.version>7.23.0</cucumber.version>
         <test-containers.version>2.0.4</test-containers.version>
         <jib.version>3.5.1</jib.version>
         <structured-logging.version>3.0.52</structured-logging.version>
-        <api-sdk-manager-java-library.version>3.0.18</api-sdk-manager-java-library.version>
+        <api-sdk-manager-java-library.version>3.0.20</api-sdk-manager-java-library.version>
         <private-api-sdk-java.version>4.0.491</private-api-sdk-java.version>
         <kafka-models.version>3.0.29</kafka-models.version>
+        <ch-kafka.version>3.0.6</ch-kafka.version>
         <commons-lang3.version>3.18.0</commons-lang3.version>
-        <log4j-api.version>2.25.3</log4j-api.version>
+        <log4j-api.version>2.25.4</log4j-api.version>
         <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
 
@@ -69,6 +70,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- CVE-2025-68161(6.3) -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j-api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -77,12 +84,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
-        </dependency>
-        <!-- CVE-2025-68161(6.3) -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j-api.version}</version>
         </dependency>
         <!-- end fixes to vulnerable transitive dependencies -->
         <dependency>
@@ -140,6 +141,11 @@
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>kafka-models</artifactId>
             <version>${kafka-models.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>ch-kafka</artifactId>
+            <version>${ch-kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -339,6 +345,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
